[metadata]
name = dafixup
version = 0.0.1
author = Dale Abbott
author_email = DaleAbbott999@gmail.com
description = For testing python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DAbbottPersonal/fixit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved MIT License
    Operating System :: OS Independent

[options]
packages = .
python_requires = >= 3.7
include_package_date = True

[options.packages.find]
exclude =
    test/*

[options.entry_points]
console_scripts =
    fixup = dafixup:run_all
    fixup_imports = dafixup:run_import_sort
    fixup_lint = dafixup:run_lint
    fixup_req = dafixup:run_requirement_generation
    fixup_typecheck = dafixup:run_typechecking